# creo

./: .env.example  .gitignore  .prettierrc  CLAUDE.md  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.claude/docs/: architecture-audit.md  audio-pipeline.md  evolution-plan.md  next-session.md  platform.md  ux-requirements.md
.claude/docs/hotkeys/: cross-platform-summary.md  linux-wayland.md  linux-x11.md  macos.md  windows.md
src/: app.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json5  tauri.linux.conf.json5  tauri.windows.conf.json5
src-tauri/capabilities/: default.json  overlay.json
src-tauri/lib/: .gitignore
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  embedding.rs  mod.rs  pipeline.rs  stt.rs  subcommand.rs  transcriber.rs  vad.rs  wakeword.rs
src-tauri/src/input/: injector.rs  mod.rs  paste.rs  typer.rs
src-tauri/src/system/: detect.rs
src/app/dictation-flow/: index.ts
src/app/dictation-flow/lib/: use-dictation-flow.ts
src/app/dictation-flow/model/: types.ts
src/app/entrypoint/: app.vue
src/app/plugins/: init.ts
src/app/styles/: main.css
src/entities/audio/: index.ts
src/entities/audio/infra/: audio.store.ts
src/entities/audio/model/: types.ts
src/entities/platform/: index.ts
src/entities/platform/infra/: platform.store.ts
src/entities/platform/model/: types.ts
src/entities/settings/: index.ts
src/entities/settings/infra/: settings.store.ts
src/entities/settings/model/: types.ts
src/entities/subcommands/: index.ts
src/entities/subcommands/infra/: subcommands.store.ts
src/entities/subcommands/model/: types.ts
src/entities/wake-commands/: index.ts
src/entities/wake-commands/infra/: wake-commands.store.ts
src/entities/wake-commands/lib/: builders.ts
src/entities/wake-commands/model/: types.ts
src/features/dictation-flow/lib/: use-dictation-flow.ts
src/features/hotkey-recorder/: index.ts
src/features/hotkey-recorder/lib/: format-for-tauri.ts  hotkey-constraints.ts
src/features/hotkey-recorder/model/: hotkey-constraints.ts  types.ts
src/features/hotkey-recorder/ui/: hotkey-recorder.vue
src/features/recording-flow/: index.ts
src/features/recording-flow/model/: types.ts
src/features/recording-flow/ui/: recording-flow.vue
src/pages/: index.vue  overlay.vue
src/pages/settings/: index.vue
src/pages/settings/ui/: rename-assistant.vue
src/shared/lib/js/: data-structures.ts
src/shared/model/: index.ts  types.ts
src/shared/ui/action-list/: action-list.vue
src/shared/ui/app-header/: app-header.vue
src/shared/ui/icons/: index.ts
src/shared/ui/keystroke-recorder/: index.ts  keystroke-recorder.vue
src/shared/ui/layouts/: default.vue  overlay.vue
src/widgets/rename-assistant/: index.ts
(+9 files in other folders)
