[package]
name = "creo"
version = "0.1.0"
description = "Creo Voice Assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "creo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = ["config-json5"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["config-json5"] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
# Future audio pipeline dependencies
# cpal = "0.15"       # Audio I/O
# whisper-rs = "0.11"  # Speech-to-text
# vad-rs = "0.1"       # Voice activity detection
